--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ find:focus {
 
 .container {
     width: 80vw;
-    height: 75vh;
-    margin-top: 1rem;
+    height: 70vh;
+    margin: 1rem 0;
 }
 
 
